--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,4 +1,4 @@
-loginpage = https://www.citilink.ru/login/
-chromedriver = C:/Users/bednovav/IdeaProjects/chromedriver.exe
+loginpage = https://www.citilink.ru/login
+chromedriver = src/test/resources/chromedriver.exe
 login = bednov_av@mail.ru
 password = Kniit2020
