--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,4 +1,5 @@
-loginpage = https://www.citilink.ru/login
+loginpage = https://www.citilink.ru
 chromedriver = src/test/resources/chromedriver.exe
 login = bednov_av@mail.ru
 password = Kniit2020
+name = Андрей
